Combine lo de Aimar e hice un inicio mas colorido

--- a/encabezado.html
+++ b/encabezado.html
@@ -1,40 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="esp">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <link rel="stylesheet" type="text/css" href="CSS/encabeza.css">
+    <title>Editorial Linea de Fuego</title>
 
 </head>
 
 <body>
-  
-
-<nav class="barra navegacion">     
-
-    <h2>Por Definir</h2>
-
-                <div class="boton navegacion">
-                    <a href="inicio.html" target="contenido">Inicio</a>
-                </div>
-                <div class="boton navegacion">
-                    <a href="categorias.html">Categorias</a>
-                </div>
-                <div class="boton navegacion">
-                    <a href="carrito.html" target="contenido">Carrito</a>
-                </div>
-                <div class="boton navegacion">
-                    <a href="favoritos.html">Favoritos</a>
-                </div>
-                <div class="boton navegacion">
-                    <a href="sesion.html" target="contenido">Iniciar sesion</a>
-                </div>
-         
-            </div>
+    <nav class="barra navegacion">     
+        <h2>Linea de Fuego</h2>
+        <nav>
+            <div>
+                <a href="inicio.html" target="contenido">Inicio</a> 
+                <a href="categorias.html">Categorias</a>
+                <a href="favoritos.html">Favoritos</a>
+                <a href="carrito.html" target="contenido">Carrito</a>
+                <a href="#">Perfil</a>
+                <a href="sesion.html" target="contenido">Iniciar sesion</a>
+            </div> 
+        </nav>
+        <div class="barra_busqueda">
+            <input type="text" placeholder="Buscar...">
+            <button>Buscar</button>
         </div>
     </nav>
-
-
 </body>
 
 </html>
+ 
