--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-
+    <title>Linea de Fuego</title>
+    <link rel="stylesheet" href="CSS/index.css"> 
 </head>
 
-<frameset rows="20%,*" noresize frameborder=1>
+<frameset rows="10%,*" noresize frameborder=1>
         <frame src="encabezado.html">
-        <frame src="inicio.html" name="contenido">
+        <frame src="inicio.html" name="contenido"> 
         </frameset>
 
 
