--- a/index.html
+++ b/index.html
@@ -206,6 +206,11 @@
                   <li>
                     <a class="dropdown-item" href="#">P3</a>
                   </li>
+                  <li>
+                    <button class="btn color-secundario w-100" href="/Formulario-Compra.html">
+                      <a class="btn color-secundario" href="/Formulario-Compra.html">Comprar</a>
+                    </button>
+                  </li>
                 </ul>
               </li>
             </ul>
@@ -297,12 +302,12 @@
           </svg>
 
           <div class="container">
-            <div class="carousel-caption text-start color-principal">
+            <div class="carousel-caption text-center color-principal">
               <h1>Checa Nuestras Ofertas!!</h1>
               <p class="">Vienen por temporadas y por tiempo limitado.</p>
               <p>
                 <a class="btn btn-lg color-secundario" href="#"
-                  >Sign up today</a
+                  >Ver Ofertas</a
                 >
               </p>
             </div>
@@ -322,14 +327,14 @@
           </svg>
 
           <div class="container">
-            <div class="carousel-caption text-start color-principal">
+            <div class="carousel-caption text-center color-principal">
               <h1>Crea Tu Cuenta</h1>
               <p class="">
                 Es facil y rapido, para que comienzas a leer desde hoy
               </p>
               <p>
                 <a class="btn btn-lg color-secundario" href="#"
-                  >Sign up today</a
+                  >Registrarse</a
                 >
               </p>
             </div>
@@ -349,14 +354,14 @@
           </svg>
 
           <div class="container">
-            <div class="carousel-caption text-start color-principal">
+            <div class="carousel-caption text-center color-principal">
               <h1>Aumenta Tu Coleccion!!</h1>
               <p class="">
                 Con lo mas nuevo y mas entretenido de nuestros producto.
               </p>
               <p>
                 <a class="btn btn-lg color-secundario" href="#"
-                  >Sign up today</a
+                  >Ver Catalago</a
                 >
               </p>
             </div>
@@ -364,7 +369,7 @@
         </div>
       </div>
       <button
-        class="carousel-control-prev"
+        class="carousel-control-prev color-secundario rounded"
         type="button"
         data-bs-target="#myCarousel"
         data-bs-slide="prev"
@@ -373,7 +378,7 @@
         <span class="visually-hidden">Previous</span>
       </button>
       <button
-        class="carousel-control-next"
+        class="carousel-control-next color-secundario rounded"
         type="button"
         data-bs-target="#myCarousel"
         data-bs-slide="next"
@@ -568,14 +573,8 @@
       <div class="row align-items-end"></div>
     </div> -->
 
-    <main class="container">
-      <div class="bg-light p-5 rounded">
-        <h3>Los más leídos</h3>
-      </div>
-    </main>
-
     <!--------------------CARUSEL Lista mas vendidso--------------------------------- -->
-<!-- 
+    <!-- 
     <div
       id="myCarouselMasLeidos"
       class="carousel slide"
@@ -705,12 +704,19 @@
       </button>
     </div> -->
 
-
     <div class="container">
-      <div class="mt-5 row ">
-        <div class="col-md-3 ">
-          <div class="card mb-4 color-principal" style="width: 16rem;">
-            <img src="../assets/dist/img/1984.jpg" style="width: 16rem; height: 20rem;" class="card-img-top" alt="" />
+      <div class="mt-5 row">
+        <div class="color-terciario p-3 rounded">
+          <h3>Los más leídos</h3>
+        </div>
+        <div class="col-md-3">
+          <div class="card mb-4 color-principal" style="width: 16rem">
+            <img
+              src="../assets/dist/img/1984.jpg"
+              style="width: 16rem; height: 20rem"
+              class="card-img-top"
+              alt=""
+            />
             <div class="card-body text-center">
               <h4 class="card-title mb-3">1984</h4>
               <h6 class="card-title mb-3">Precio: $100</h6>
@@ -719,35 +725,50 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3 ">
-          <div class="card mb-4 color-principal" style="width: 16rem;" >
-            <img src="../assets/dist/img/caidaCartago.jpg" style="width: 16rem; height: 20rem;" class="card-img-top" alt="" />
+        <div class="col-md-3">
+          <div class="card mb-4 color-principal" style="width: 16rem">
+            <img
+              src="../assets/dist/img/caidaCartago.jpg"
+              style="width: 16rem; height: 20rem"
+              class="card-img-top"
+              alt=""
+            />
             <div class="card-body text-center">
               <h4 class="card-title mb-3">La Caída De Cartago</h4>
               <h6 class="card-title mb-3">Precio: $300</h6>
-              <h6 class=" mb-3">Autor: Adrian Keith </h6>
+              <h6 class="mb-3">Autor: Adrian Keith</h6>
               <button class="btn color-secundario w-100">Agregar</button>
             </div>
           </div>
         </div>
-        <div class="col-md-3 ">
-          <div class="card mb-4 color-principal" style="width: 16rem;" >
-            <img src="..\assets\dist\img\rebelionEnLaGranja.jpg" style="width: 16rem; height: 20rem;" class="card-img-top" alt="" />
+        <div class="col-md-3">
+          <div class="card mb-4 color-principal" style="width: 16rem">
+            <img
+              src="..\assets\dist\img\rebelionEnLaGranja.jpg"
+              style="width: 16rem; height: 20rem"
+              class="card-img-top"
+              alt=""
+            />
             <div class="card-body text-center">
               <h5 class="card-title mb-3">Rebelión en la granja</h5>
               <h6 class="card-title mb-3">Precio: $400</h6>
-              <h6 class=" mb-3">Autor: George Orwell </h6>
+              <h6 class="mb-3">Autor: George Orwell</h6>
               <button class="btn color-secundario w-100">Agregar</button>
             </div>
           </div>
         </div>
-        <div class="col-md-3 ">
-          <div class="card mb-4 color-principal" style="width: 16rem;" >
-            <img src="..\assets\dist\img\metro2033.jpg" style="width: 16rem; height: 20rem;" class="card-img-top" alt="" />
+        <div class="col-md-3">
+          <div class="card mb-4 color-principal" style="width: 16rem">
+            <img
+              src="..\assets\dist\img\metro2033.jpg"
+              style="width: 16rem; height: 20rem"
+              class="card-img-top"
+              alt=""
+            />
             <div class="card-body text-center">
               <h5 class="card-title mb-3">Metro 2033</h5>
               <h6 class="card-title mb-3">Precio: $400</h6>
-              <h6 class=" mb-3">Autor: Dmitry Glukhovsky </h6>
+              <h6 class="mb-3">Autor: Dmitry Glukhovsky</h6>
               <button class="btn color-secundario w-100">Agregar</button>
             </div>
           </div>
@@ -755,7 +776,77 @@
       </div>
     </div>
 
-
+    <div class="container">
+      <div class="mt-5 row">
+        <div class="color-terciario p-3 rounded">
+          <h3>Agregados Recientemente</h3>
+        </div>
+        <div class="col-md-3">
+          <div class="card mb-4 color-principal" style="width: 16rem">
+            <img
+              src="../assets/dist/img/unMundoFeliz.jpg"
+              style="width: 16rem; height: 20rem"
+              class="card-img-top"
+              alt=""
+            />
+            <div class="card-body text-center">
+              <h4 class="card-title mb-3">Un Mundo Feliz</h4>
+              <h6 class="card-title mb-3">Precio: $289</h6>
+              <h6 class="card-title mb-3">Autor: Aldous Huxleyl</h6>
+              <button class="btn color-secundario w-100">Agregar</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card mb-4 color-principal" style="width: 16rem">
+            <img
+              src="../assets/dist/img/fah451.jpg"
+              style="width: 16rem; height: 20rem"
+              class="card-img-top"
+              alt=""
+            />
+            <div class="card-body text-center">
+              <h4 class="card-title mb-3">Fahrenheit 451</h4>
+              <h6 class="card-title mb-3">Precio: $413</h6>
+              <h6 class="mb-3">Autor: Ray Bradbury</h6>
+              <button class="btn color-secundario w-100">Agregar</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card mb-4 color-principal" style="width: 16rem">
+            <img
+              src="..\assets\dist\img\tormentaEspadas.jpg"
+              style="width: 16rem; height: 20rem"
+              class="card-img-top"
+              alt=""
+            />
+            <div class="card-body text-center">
+              <h5 class="card-title mb-3">Tormenta de espadas</h5>
+              <h6 class="card-title mb-3">Precio: $398</h6>
+              <h6 class="mb-3">Autor: George R.R. Martin</h6>
+              <button class="btn color-secundario w-100">Agregar</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card mb-4 color-principal" style="width: 16rem">
+            <img
+              src="..\assets\dist\img\elImperioRomano.jpg"
+              style="width: 16rem; height: 20rem"
+              class="card-img-top"
+              alt=""
+            />
+            <div class="card-body text-center">
+              <h5 class="card-title mb-3">El Imperio Romano</h5>
+              <h6 class="card-title mb-3">Precio: $530</h6>
+              <h6 class="mb-3">Autor: Isaac Asimov</h6>
+              <button class="btn color-secundario w-100">Agregar</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <script src="./assets/dist/js/bootstrap.bundle.min.js"></script>
   </body>
